name:                mkreply
version:             0.1.0.0
synopsis:            Automate writing replies to students' lab submissions.
-- description:         
homepage:            http://ekblad.cc/phdtools/
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mkreply
  main-is:             mkreply.hs
  build-depends:
    base >=4.6 && <4.8,
    domplate,
    utf8-string >= 0.3,
    bytestring >= 0.10,
    directory >= 1.2,
    Hclip >= 3
  default-language:    Haskell2010
