name:                unpack
version:             0.1.0.0
synopsis:            Unpack any archive, with a variety of options.
-- description:         
homepage:            http://ekblad.cc/phdtools/
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable unpack
  main-is:
    unpack.hs
  build-depends:
    base             >=4.8   && <5,
    shellmate        >=0.3.1 && <0.4,
    shellmate-extras >=0.3.1 && <0.4
  default-language:
    Haskell2010
  ghc-options:
    -threaded